using sample name as participant^tumor_or_normal to better handle natgen2015 data

--- a/Combined_VIF_analysis/Combine_Processed_Samples_Data.Rmd
+++ b/Combined_VIF_analysis/Combine_Processed_Samples_Data.Rmd
@@ -177,8 +177,8 @@ NATGEN2015_hybcap_samples = NATGEN2015_hybcap_samples %>%
   mutate(seqtype = ifelse(seqtype == 'hivid', 'HYB', seqtype)) %>%
   mutate(seqtype = ifelse(seqtype == 'rnaseq', 'RNA', seqtype)) %>%
   mutate(seqtype = ifelse(seqtype == 'wgs', 'WGS', seqtype)) %>%
-  rename(participant = sample_label_short) %>% 
-  select(-sra_num_reads, -sample_label)
+  mutate(participant = sample_label_short) %>% 
+  select(-sra_num_reads, -sample_label, -sample_label_short)
 
 
 NATGEN2015_hybcap_samples = NATGEN2015_hybcap_samples %>% mutate(tumor_or_normal = ifelse(participant %in% c('CASKID', 'S12', 'SIHA', 'HELA'), "tumor_cell_line", tumor_or_normal))
@@ -192,6 +192,16 @@ combined_all_samples = bind_rows(TCGA_combined_samples,
                                        GTEx_rnaseq_samples,
                                        CCLE_combined_samples,
                                        NATGEN2015_hybcap_samples) %>% unique()
+
+```
+
+
+```{r}
+
+combined_all_samples = combined_all_samples %>%
+  mutate(sample_id = sample_name) %>%
+  mutate(sample_name = paste(participant, tumor_or_normal, sep="^"))
+  
 
 ```
 
