--- a/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
@@ -16,7 +16,8 @@ library(igraph)
 
 ```{r}
 
-data = read.table("plot.hotspots.win_1e6.min3.tsv.w_20_neighbors.hotspot_virus_sample_counts.matrix.tsv", header=T, sep="\t", stringsAsFactors = F, row.names=1)
+data = read.table("plot.hotspots.win_1e6.min3.tsv.w_20_neighbors.hotspot_virus_sample_counts.matrix.tsv", 
+                  header=T, sep="\t", stringsAsFactors = F, row.names=1)
 
 ```
 
@@ -201,4 +202,24 @@ hotspot_info %>% filter(sum_insertions >= 10) %>%
 
 
 
+```{r}
+
+hotspot_info %>% filter(sum_insertions >= 5) %>% 
+  mutate(virus_genome = ifelse(grepl("HPV", virus_genome), "HPV", virus_genome)) %>%
+  ggplot(aes(x=reorder(hotspot_name, -1*sum_insertions), y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
+   theme(axis.text.x = element_text(angle = 90, hjust = 1))
+  
+
 ```
+
+```{r}
+hotspot_info %>% filter(sum_insertions >= 4) %>% 
+  mutate(virus_genome = ifelse(grepl("HPV", virus_genome), "HPV", virus_genome)) %>%
+  ggplot(aes(x=reorder(hotspot_name, -1*sum_insertions), y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
+   theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+```
+
+
+  
+
