--- a/Combined_VIF_analysis/Insertion_and_CNVs/Insertions_and_CNVs.Rmd
+++ b/Combined_VIF_analysis/Insertion_and_CNVs/Insertions_and_CNVs.Rmd
@@ -14,7 +14,7 @@ library(tidyverse)
 
 ```{r}
 
-insertions_and_cnv_data = read.table("TCGA_insertions_and_CNV_within10kb", sep="\t", header=T, stringsAsFactors = F)
+insertions_and_cnv_data = read.table("TCGA_insertions_and_CNV_within10kb", sep="\t", header=T, stringsAsFactors = F) %>% unique()
 
 ```
 
@@ -22,7 +22,7 @@ insertions_and_cnv_data = read.table("TCGA_insertions_and_CNV_within10kb", sep="
 ```{r}
 
 
-insertions_data = read.table(gzfile("../InsertionAnalysis/all_insertions_and_virus_content_merged.FILTERED.tsv.gz"), 
+insertions_data = read.table("../InsertionAnalysis/all_insertions_and_virus_content_merged.FILTERED.tsv", 
                              header=T, sep="\t", stringsAsFactors = F)
 
 insertions_data = insertions_data %>% select(sample_id, contig, humanchr, human_coord, total_rpm)
@@ -115,5 +115,31 @@ combined_data %>% ggplot(aes(x=virus, y=copy_number, fill=type)) + geom_boxplot(
 
 ```
 
+
+```{r}
+# run statistics
+
+viruses = combined_data %>% select(virus) %>% unique() %>% pull(virus)
+
+stats_df = NULL
+
+for (virus_name in viruses) {
+  
+  virus_data = combined_data %>% filter(virus == virus_name)
+  real_insertions_cnv = virus_data %>% filter(type=='real') %>% pull(copy_number)
+  random_loc_cnv = virus_data %>% filter(type=='random_loc') %>% pull(copy_number)
+  
+  w = wilcox.test(real_insertions_cnv, random_loc_cnv, alternative='greater')
+ 
+  #message(virus_name)
+  #print(w)
+  
+  stats_df = bind_rows(stats_df, data.frame(virus=virus_name, p_raw = w$p.value))
+  
+}
+
+stats_df$p_bh = p.adjust(stats_df$p, method='hochberg')
+
+stats_df %>% arrange(p_bh)
 
 ```
